force-app/main/default/objects/FieloEE__Member__c/FieloEE__Member__c.object-meta.xml
<CustomObject>
    <description>Members of your Fielo programs.</description>
    <label>Member</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>