force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__AgreementReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__AgreementReadOnly__c</fullName>
    <description>Shows and allows member to check the current Agreement</description>
    <formula>HYPERLINK(&apos;/&apos; +  FieloEE__Agreement__c , FieloEE__Agreement__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement (Read Only)</label>
    <type>Text</type>
</CustomField>