force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__ApprovedReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ApprovedReadOnly__c</fullName>
    <formula>IF(  FieloEE__Approved__c , IMAGE(&apos;/resource/&apos;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&apos;images/checked.png&apos;, $Label.fieloee__approved) , IMAGE(&apos;/resource/&apos;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&apos;images/unchecked.png&apos;, $Label.fieloee__notapproved) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved (Read Only)</label>
    <type>Text</type>
</CustomField>