force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Birthdate__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Birthdate__c</fullName>
    <description>Birth date for this member.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the member&apos;s birth date.</inlineHelpText>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>