force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Country__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Country__c</fullName>
    <description>The country of this member.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the country where the member lives.</inlineHelpText>
    <label>Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>