force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__EnabledStatusReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__EnabledStatusReadOnly__c</fullName>
    <formula>IF( FieloEE__Enabled__c , IMAGE(&apos;/resource/&apos;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&apos;images/checked.png&apos;, $Label.fieloee__enabled) , IMAGE(&apos;/resource/&apos;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&apos;images/unchecked.png&apos;, $Label.fieloee__notenabled) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enabled Status (Read Only)</label>
    <type>Text</type>
</CustomField>