force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__IdentificationCode__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__IdentificationCode__c</fullName>
    <description>ID number of this member.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Here you can see the ID number of this member.</inlineHelpText>
    <label>Identification Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>