force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__imageId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__imageId__c</fullName>
    <description>The ID of the image uploaded by this member.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the ID of this member&apos;s image.</inlineHelpText>
    <label>imageId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>