force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__IsActive__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__IsActive__c</fullName>
    <description>Status of the member.</description>
    <formula>IF( FieloEE__User__r.IsActive == True, &apos;True&apos;, &apos;False&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Text</type>
</CustomField>