force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__MemberCode__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MemberCode__c</fullName>
    <description>Deprecated Field</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>zz_deprecated_Member Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>