force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Name__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Name__c</fullName>
    <description>Name of the member</description>
    <formula>FieloEE__FirstName__c  &amp;&apos; &apos; &amp; FieloEE__LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>