force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Neighborhood__c</fullName>
    <description>The neighborhood where your member lives.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the neighborhood where the member lives.</inlineHelpText>
    <label>Neighborhood</label>
    <length>50</length>
    <type>Text</type>
</CustomField>