force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__OperatorCode__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__OperatorCode__c</fullName>
    <description>Deprecated Field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>zz_deprecated_Operator Code</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>