force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Preference__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Preference__c</fullName>
    <description>Deprecated Field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>zz_deprecated_Preference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>