force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__ProfileCompleteness__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ProfileCompleteness__c</fullName>
    <description>The dregree of completeness of this member&apos;s profile.</description>
    <inlineHelpText>Here you can see how complete is the member&apos;s profile.</inlineHelpText>
    <label>Profile completeness</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>