force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__ReferalMemberReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ReferalMemberReadOnly__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +  FieloEE__ReferalMember__c ,  FieloEE__ReferalMember__r.FieloEE__Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referal Member (Read Only)</label>
    <type>Text</type>
</CustomField>