force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__Registered__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the member has created an user for the members&apos; portal.</description>
    <inlineHelpText>Members are “Registered” if they have created an user in the members&apos; portal.</inlineHelpText>
    <label>Registered</label>
    <type>Checkbox</type>
</CustomField>