force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__RegisteredReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RegisteredReadOnly__c</fullName>
    <formula>IF( FieloEE__Registered__c , IMAGE(&apos;/resource/&apos;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&apos;images/checked.png&apos;, $Label.fieloee__registered) , IMAGE(&apos;/resource/&apos;+$Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c+&apos;images/unchecked.png&apos;, $Label.fieloee__notregistered) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Members are “Registered” if they have created an user in the members&apos; portal.</inlineHelpText>
    <label>Registered (Read Only)</label>
    <type>Text</type>
</CustomField>