force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__StartDate__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__StartDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The date when this member registered in the program.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the date when the member registered in the program.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>