force-app/main/default/objects/FieloEE__Member__c/fields/FieloEE__State__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__State__c</fullName>
    <description>The state or province where this member lives.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the state or province where the member lives.</inlineHelpText>
    <label>State/Province</label>
    <length>40</length>
    <type>Text</type>
</CustomField>