force-app/main/default/objects/FieloEE__Member__c/validationRules/FieloEE__Operator_Password.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Operator_Password</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( FieloEE__Type__c,  &apos;Operator&apos; )&amp;&amp; (   ISBLANK(FieloEE__OperatorPassword__c)  ||  ISBLANK( FieloEE__OperatorCode__c ))</errorConditionFormula>
    <errorMessage>Operator Code and Operator password is required</errorMessage>
</ValidationRule>