force-app/main/default/objects/FieloEE__Member__c/validationRules/FieloEE__RequiredCode.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__RequiredCode</fullName>
    <active>true</active>
    <errorConditionFormula>( ISPICKVAL( FieloEE__IdentificationType__c, &apos;&apos; ) &amp;&amp; ( FieloEE__IdentificationCode__c != &apos;&apos; ) ) || ( ! ISPICKVAL( FieloEE__IdentificationType__c, &apos;&apos; ) &amp;&amp; ( FieloEE__IdentificationCode__c == &apos;&apos; ) )</errorConditionFormula>
    <errorMessage>You must complete Identification type and Identification Number or neither of both</errorMessage>
</ValidationRule>